syntax = "proto3";
import "google/protobuf/timestamp.proto";

package product;

message Product {
    int64 product_id = 1;
    string name = 2;
    string version = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateProducts {
    repeated Product products = 1;  
}

message UpdateProducts {
    repeated Product products = 1;  
}

message DeleteProducts {
    repeated int64 product_id = 1; 
}


// If id < 0, get all
message GetProduct {
    int64 product_id = 1;  
}
